# llama-cpp-python

./: .gitignore  CMakeLists.txt
examples/server/: agent.py  plugin.py
llama_cpp/: llama_cpp.py
llama_cpp/server/: __main__.py  app.py  client.py  settings.py
llama_cpp/server/endpoints/: chroma.py  openai_v1.py
llama_cpp/server/plugins/: __init__.py  ui.py
llama_cpp/server/static/: index.html
llama_cpp/server/storage/: __init__.py  vectorstore.py
